--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-skills/employee-skills.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-skills/employee-skills.component.scss
@@ -34,3 +34,18 @@
     margin-bottom: 10px;
 }
 
+.btn-view-more-skills {
+  font-family: Roboto;
+  cursor: pointer;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 22px;
+  padding: 5px 10px 0px 0px;
+  color: #1b83b1;
+  align-self: flex-end;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
