--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/shared/nav-bar/nav-bar.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/shared/nav-bar/nav-bar.component.scss
@@ -4,66 +4,166 @@ $logo-color-1100: 6%;
 $logo-color-950: 7%;
 $logo-color-420: 17%;
 
+.navbar {
+  height: 70px;
+  background: rgb(255, 255, 255); /* Old browsers */
+  background: -moz-linear-gradient(left, #c70000 0%, #c70000 $logo-color-lg, #222b33 $logo-color-lg); /* FF3.6-15 */
+  background: -webkit-linear-gradient(
+    left,
+    #c70000 0%,
+    #c70000 $logo-color-lg,
+    #222b33 $logo-color-lg
+  ); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(
+    to right,
+    #c70000 0%,
+    #c70000 $logo-color-lg,
+    #222b33 $logo-color-lg
+  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#7db9e8',GradientType=1 ); /* IE6-9 */
 
-.navbar{
-    background: rgb(255,255,255); /* Old browsers */
-    background: -moz-linear-gradient(left,  #C70000 0%, #C70000 $logo-color-lg, #222B33 $logo-color-lg); /* FF3.6-15 */
-    background: -webkit-linear-gradient(left,  #C70000 0%,#C70000 $logo-color-lg,#222B33 $logo-color-lg); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to right,  #C70000 0%,#C70000 $logo-color-lg,#222B33 $logo-color-lg); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  @media screen and (max-width: 1400px) {
+    background: -moz-linear-gradient(left, #c70000 0%, #c70000 $logo-color-md, #222b33 $logo-color-md); /* FF3.6-15 */
+    background: -webkit-linear-gradient(
+      left,
+      #c70000 0%,
+      #c70000 $logo-color-md,
+      #222b33 $logo-color-md
+    ); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(
+      to right,
+      #c70000 0%,
+      #c70000 $logo-color-md,
+      #222b33 $logo-color-md
+    ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#7db9e8',GradientType=1 ); /* IE6-9 */
+  }
 
-    @media screen and (max-width: 1400px) {
-        background: -moz-linear-gradient(left,  #C70000 0%, #C70000 $logo-color-md, #222B33 $logo-color-md); /* FF3.6-15 */
-        background: -webkit-linear-gradient(left,  #C70000 0%,#C70000 $logo-color-md,#222B33 $logo-color-md); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to right,  #C70000 0%,#C70000 $logo-color-md,#222B33 $logo-color-md); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#7db9e8',GradientType=1 ); /* IE6-9 */
-    }
-    
-    @media screen and (max-width: 1100px) {
-        background: -moz-linear-gradient(left,  #C70000 0%, #C70000 $logo-color-1100, #222B33 $logo-color-1100); /* FF3.6-15 */
-        background: -webkit-linear-gradient(left,  #C70000 0%,#C70000 $logo-color-1100,#222B33 $logo-color-1100); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to right,  #C70000 0%,#C70000 $logo-color-1100,#222B33 $logo-color-1100); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#7db9e8',GradientType=1 ); /* IE6-9 */
-    } 
+  @media screen and (max-width: 1100px) {
+    background: -moz-linear-gradient(
+      left,
+      #c70000 0%,
+      #c70000 $logo-color-1100,
+      #222b33 $logo-color-1100
+    ); /* FF3.6-15 */
+    background: -webkit-linear-gradient(
+      left,
+      #c70000 0%,
+      #c70000 $logo-color-1100,
+      #222b33 $logo-color-1100
+    ); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(
+      to right,
+      #c70000 0%,
+      #c70000 $logo-color-1100,
+      #222b33 $logo-color-1100
+    ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#7db9e8',GradientType=1 ); /* IE6-9 */
+  }
 
-    @media screen and (max-width: 950px) {
-        background: -moz-linear-gradient(left,  #C70000 0%, #C70000 $logo-color-950, #222B33 $logo-color-950); /* FF3.6-15 */
-        background: -webkit-linear-gradient(left,  #C70000 0%,#C70000 $logo-color-950,#222B33 $logo-color-950); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to right,  #C70000 0%,#C70000 $logo-color-950,#222B33 $logo-color-950); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#7db9e8',GradientType=1 ); /* IE6-9 */
-    } 
+  @media screen and (max-width: 950px) {
+    background: -moz-linear-gradient(left, #c70000 0%, #c70000 $logo-color-950, #222b33 $logo-color-950); /* FF3.6-15 */
+    background: -webkit-linear-gradient(
+      left,
+      #c70000 0%,
+      #c70000 $logo-color-950,
+      #222b33 $logo-color-950
+    ); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(
+      to right,
+      #c70000 0%,
+      #c70000 $logo-color-950,
+      #222b33 $logo-color-950
+    ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#7db9e8',GradientType=1 ); /* IE6-9 */
+  }
 
-    @media screen and (max-width: 420px) {
-        background: -moz-linear-gradient(left,  #C70000 0%, #C70000 $logo-color-420, #222B33 $logo-color-420); /* FF3.6-15 */
-        background: -webkit-linear-gradient(left,  #C70000 0%,#C70000 $logo-color-420,#222B33 $logo-color-420); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to right,  #C70000 0%,#C70000 $logo-color-420,#222B33 $logo-color-420); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#7db9e8',GradientType=1 ); /* IE6-9 */
-    } 
-
+  @media screen and (max-width: 420px) {
+    background: -moz-linear-gradient(left, #c70000 0%, #c70000 $logo-color-420, #222b33 $logo-color-420); /* FF3.6-15 */
+    background: -webkit-linear-gradient(
+      left,
+      #c70000 0%,
+      #c70000 $logo-color-420,
+      #222b33 $logo-color-420
+    ); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(
+      to right,
+      #c70000 0%,
+      #c70000 $logo-color-420,
+      #222b33 $logo-color-420
+    ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#7db9e8',GradientType=1 ); /* IE6-9 */
+  }
 }
 
 .navbar-brand {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.pk-title{
-    text-align: center;
-    margin-right: auto;
-    margin-left: auto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    color: #FFFFFF;
-    cursor: pointer;
+.pk-title {
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  color: #ffffff;
+  cursor: pointer;
 }
 
-.side-nav-toggle{
-    color: #FFFFFF;
-    cursor: pointer;
-    padding: 5px;
+.side-nav-toggle {
+  color: #ffffff;
+  cursor: pointer;
+  padding: 5px;
 }
 
-.profile{
-    float: right;
-    cursor: pointer;
+.profile {
+  float: right;
+  cursor: pointer;
+}
+
+$break-small: 510px;
+$color-black-normal: #202b34;
+$color-black-hover: #000000;
+$color-white: #ffffff;
+
+.form-search-name {
+  padding-right: 20px;
+  width: 350px;
+}
+
+.mat-form-field {
+  width: 100%;
+  height: 44px;
+  background: $color-black-normal;
+  border: 2px solid $color-white;
+  color: $color-white;
+  border-radius: 20px;
+
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+  margin: 5px 5px 5px 0px;
+  padding: 0px 5px 5px 15px;
+}
+
+.mat-input-element { 
+    caret-color: $color-white;
+}
+
+.placeholder {
+    color: $color-white;
+}
+
+.mat-focused .placeholder {
+    color: $color-white;
+}
+
+::ng-deep .mat-form-field-label {
+  font-size: 14px !important;
+}
+
+::ng-deep .mat-form-field-underline {
+  display: none;
 }
