--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-info/employee-info.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-info/employee-info.component.html
@@ -27,7 +27,7 @@
                                 <fa-icon class="slider-icon" [icon]="faUser" size="md"></fa-icon>
                         </div>
                         <div class="col-10">
-                                <span class="employee-info-key">Years Experience: </span> {{employeeInfoDetails.experienceInYears}}
+                                <span class="employee-info-key">Experience: </span> {{employeeInfoDetails.experienceInYears}}
                         </div>
                 </div>
         </div>
