--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
@@ -20,8 +20,9 @@
                 <div class="row">
                     <div class="col-lg-10">
                         <div class="row">
-                            <div class="col-lg-4">
-                                <app-search-role-input (searchRoleEvent)="roleMessage($event)"></app-search-role-input>
+                            <div class="col-lg-4 role-input">
+                                <app-search-role-input (searchRoleEvent)="roleMessage($event)">
+                                </app-search-role-input>
                             </div>
                             <div class="col-lg-3">
                                 <app-search-skill-input (searchSkillEvent)="skillMessage($event)">
