--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/search-form/search-role-input/search-role-input.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/search-form/search-role-input/search-role-input.component.scss
@@ -3,6 +3,28 @@ $color-black-normal: #202B34;
 $color-black-hover: #000000;
 $color-white: #FFFFFF;
 
+.col-10 {
+    padding-right: 0px;
+}
+
+.col-2 {
+    padding: 0px;
+}
+
+.question-icon {
+    color: #C70000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 50px;
+    width: 30px;
+}
+
+.question-icon:hover {
+        cursor: pointer;
+}
+
 .mat-form-field{
     width: 100%;
     height: 44px;
@@ -26,3 +48,4 @@ $color-white: #FFFFFF;
 ::ng-deep .mat-form-field-underline {
     display: none;
 }
+
