--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
@@ -118,6 +118,10 @@
                     View Profile
                 </span>
             </a>
+            <!-- <span class="btn-view-more-skills" (click)="goToProfile(employee.employeeId)">
+                    <fa-icon class="slider-icon" [icon]="faChevronDown" size="sm"></fa-icon>
+                    View Profile
+            </span> -->
         </div>
     </div>
 </div>
