--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.scss
@@ -1,192 +1,216 @@
 $break-small: 700px;
-$color-black-normal: #202B34;
+$color-black-normal: #202b34;
 $color-black-hover: #000000;
-$color-white: #FFFFFF;
+$color-white: #ffffff;
 
 .search {
-    margin: 50px 0px 0px 0px;
+  margin: 50px 0px 0px 0px;
 }
 
-.col-lg-2, .col-lg-1, .col-lg-3, .col-lg-4, .col-lg-5 {
-    padding-right: 0px;
-    @media screen and (max-width: $break-small) {
-        padding-right: 15px;
-    }
+.col-lg-2,
+.col-lg-1,
+.col-lg-3,
+.col-lg-4,
+.col-lg-5 {
+  padding-right: 0px;
+  @media screen and (max-width: $break-small) {
+    padding-right: 15px;
+  }
 }
 
 @media screen and (max-width: $break-small) {
-    .filter-results-form {
-        display: flex;
-        flex-direction: column-reverse;
-    }
+  .filter-results-form {
+    display: flex;
+    flex-direction: column-reverse;
+  }
 }
 
 h1 {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 50px;
-    line-height: 59px;
-    @media screen and (max-width: $break-small) {
-        font-size: 30px;
-        line-height: 35px;
-    }
+  font-style: normal;
+  font-weight: bold;
+  font-size: 50px;
+  line-height: 59px;
+  @media screen and (max-width: $break-small) {
+    font-size: 30px;
+    line-height: 35px;
+  }
+}
+
+.modified-date {
+  display: flex;
+  justify-content: flex-end;
+  align-content: center;
+  align-items: center;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 30px;
+  color: #000000;
+
+  @media screen and (max-width: $break-small) {
+    display: flex;
+    justify-content: left;
+    align-content: center;
+    align-items: center;
+    line-height: 20px;
+  }
+
 }
 
 .question-icon {
-    color: #C70000;
-    display: flex;
-    justify-content: flex-end;
-    padding-top: 3px;
+  color: #c70000;
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 3px;
 }
 
 .question-icon:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .slider {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 67px;
-    color: $color-black-normal;
-    &:hover {
-        cursor: pointer;
-        color: $color-black-hover;
-    }
-    @media screen and (max-width: $break-small) {
-        height: 35px;
-    }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 67px;
+  color: $color-black-normal;
+  &:hover {
+    cursor: pointer;
+    color: $color-black-hover;
+  }
+  @media screen and (max-width: $break-small) {
+    height: 35px;
+  }
 }
 
 .slider-icon-text {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 18px;
-    /* identical to box height */
-    padding-left: 15px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 18px;
+  /* identical to box height */
+  padding-left: 15px;
 }
 
 .search-input {
-    margin: 5px;
-    height: 44px;
-    background: $color-white;
-    border: 1px solid #A5B2B6;
-    box-sizing: border-box;
-    border-radius: 5px;
-    
-    font-style: normal;
+  margin: 5px;
+  height: 44px;
+  background: $color-white;
+  border: 1px solid #a5b2b6;
+  box-sizing: border-box;
+  border-radius: 5px;
+
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 22px;
+  color: $color-black-hover;
+  &::placeholder {
+    font-style: italic;
     font-weight: normal;
-    font-size: 14px;
-    line-height: 22px;
-    color: $color-black-hover;
-    &::placeholder {
-        font-style: italic;
-        font-weight: normal;
-        font-size: 12px;
-        line-height: 16px;
-    }
+    font-size: 12px;
+    line-height: 16px;
+  }
 }
 
 .skills {
-    margin: 5px 20px 5px 0px;
+  margin: 5px 20px 5px 0px;
 }
 
 .remove-skill {
-    padding-left: 15px;
-    &:hover{
-        cursor: pointer;
-    }
+  padding-left: 15px;
+  &:hover {
+    cursor: pointer;
+  }
 }
 
-.search-filter{
-    width: 149px;
-    height: 44px;
-    background: $color-black-normal;
-    border-radius: 4px;
+.search-filter {
+  width: 149px;
+  height: 44px;
+  background: $color-black-normal;
+  border-radius: 4px;
 
-    font-style: normal;
-    font-weight: 500;
-    font-size: 15px;
-    text-align: center;
-    color: $color-white;
-    margin: 5px 5px 5px 0px;
-    &:hover {
-        background: $color-black-hover;
-    }
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  text-align: center;
+  color: $color-white;
+  margin: 5px 5px 5px 0px;
+  &:hover {
+    background: $color-black-hover;
+  }
 }
 
 .mat-chip.mat-standard-chip {
-    background-color: #D6DCE5;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 22px;
-    color: #202B34;
-    border: 1px solid #202B34;
+  background-color: #d6dce5;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 22px;
+  color: #202b34;
+  border: 1px solid #202b34;
 
-    &:hover {
-        background-color: transparent;
-        cursor: pointer;
-        border: 1px solid #202B34;
-    }
+  &:hover {
+    background-color: transparent;
+    cursor: pointer;
+    border: 1px solid #202b34;
+  }
 }
 
 ::ng-deep .fa-sm {
-    font-size: 0.8em;
+  font-size: 0.8em;
 }
 
-.mat-form-field{
-    width: 100%;
-    height: 44px;
-    background: $color-white;
-    border: 1px solid #B5B5B5;
-    color: $color-black-normal;
-    border-radius: 5px;
+.mat-form-field {
+  width: 100%;
+  height: 44px;
+  background: $color-white;
+  border: 1px solid #b5b5b5;
+  color: $color-black-normal;
+  border-radius: 5px;
 
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 20px;
-    margin: 5px 5px 5px 0px;
-    padding: 0px 5px 5px 5px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+  margin: 5px 5px 5px 0px;
+  padding: 0px 5px 5px 5px;
 }
 
-::ng-deep .mat-form-field-label{
-    font-size: 14px !important;
+::ng-deep .mat-form-field-label {
+  font-size: 14px !important;
 }
 
 ::ng-deep .mat-form-field-underline {
-    display: none;
+  display: none;
 }
 
 ::ng-deep .mat-snack-bar-container.snack-bar-danger {
-    background-color: #dc3545;
-    color: #fff;
+  background-color: #dc3545;
+  color: #fff;
 }
 
-.filter-form-buttons{
-    text-align: center;
+.filter-form-buttons {
+  text-align: center;
 }
 
 .reset-filters {
-    display: block;
-    font-family: Roboto;
-    cursor: pointer;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 22px;
-    padding-left: 0;
-    color: #1B83B1;
+  display: block;
+  font-family: Roboto;
+  cursor: pointer;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 22px;
+  padding-left: 0;
+  color: #1b83b1;
 
-    &:hover{
-        text-decoration: underline;
-    }
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .submit-skills {
-    @extend .reset-filters;
-    padding-left: 6px;
+  @extend .reset-filters;
+  padding-left: 6px;
 }
-
