--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
@@ -22,7 +22,7 @@
                 <div class="col-lg-4">
                     <fa-icon class="slider-icon question-icon" [icon]="faQuestionCircle" size="md"
                         matTooltipPosition="right"
-                        matTooltip="Search by role: Demonstrated responsibility with skill(s) in the current project(s)">
+                        matTooltip="Demonstrated responsibility with skill(s) in the current project(s)">
                     </fa-icon>
                 </div>
             </div>
