Add Start date, hire date and onload

--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-info/employee-info.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-info/employee-info.component.html
@@ -18,7 +18,7 @@
                         </div>
                         <div class="col-10">
                                 <span class="employee-info-key">Hired: </span>
-                                {{employeeInfoDetails.hiredDate | date : 'MM/yyyy'}}
+                                {{employeeInfoDetails.hiredDate | date : 'mediumDate'}}
                         </div>
                 </div>
         </div>
