--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
@@ -10,9 +10,9 @@
                     <span class="slider-icon-text">Filter</span>
                 </div>
             </div> -->
-            <div class="col-md-4 modified-date" *ngIf="modifiedDate">
+            <!-- <div class="col-md-4 modified-date" *ngIf="modifiedDate">
                 Last Data Sync: {{modifiedDate}} Hours Ago
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- *ngIf="!isMobile || toggleSearchForm"  -->
