--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-experience/employee-experience.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-experience/employee-experience.component.html
@@ -34,8 +34,20 @@
                                                 </div>
                                         </div>
                                 </div>
-                                <div class="col-md-3">
-                                        <div class="row" *ngIf="project.resourceEndDate">
+                                <div class="col-md-3" *ngIf="project.resourceStartDate">
+                                                <div class="row">
+                                                        <div class="col-1">
+                                                                <fa-icon class="slider-icon" [icon]="faCalendar" size="md">
+                                                                </fa-icon>
+                                                        </div>
+                                                        <div class="col-10">
+                                                                <span class="employee-info-key">Start Date: </span>
+                                                                {{project.resourceStartDate | date : 'mediumDate'}}
+                                                        </div>
+                                                </div>
+                                        </div>
+                                <div class="col-md-3" *ngIf="project.resourceEndDate">
+                                        <div class="row">
                                                 <div class="col-1">
                                                         <fa-icon class="slider-icon" [icon]="faCalendar" size="md">
                                                         </fa-icon>
@@ -46,8 +58,8 @@
                                                 </div>
                                         </div>
                                 </div>
-                                <div class="col-md-3">
-                                        <div class="row" *ngIf="project.role">
+                                <div class="col-md-3" *ngIf="project.role">
+                                        <div class="row" >
                                                 <div class="col-1">
                                                         <fa-icon class="slider-icon" [icon]="faUserCircle" size="md">
                                                         </fa-icon>
