Fix profile nav-bar, add 5 skills and changes in profile page

--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-hero/employee-hero.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-hero/employee-hero.component.html
@@ -9,7 +9,7 @@
         <div class="col-md-9">
             <div class="employee-general">
                 <h1>{{employeeHeroDetails.fullName}}</h1>
-                <h4>{{employeeHeroDetails.roleName}} {{ isEmployee ? '(Employee)' : '(Contractor)'}}</h4>
+                <h4>{{employeeHeroDetails.roleName}}</h4>
                 <!-- <div class="employee-buttons">
                     <button *ngIf="employeeHeroDetails.isMvp" type="button" class="btn btn-mvp">
                         <fa-icon class="slider-icon" [icon]="faTrophy" size="md"></fa-icon>
